repl run bug fix